--- a/my-finder/src/main/resources/application.properties
+++ b/my-finder/src/main/resources/application.properties
@@ -1,25 +1,32 @@
-# Logging
-logging.file=app.log
-
-# Spring Security default user name and password
-spring.security.user.name=actuator
-spring.security.user.password=actuator
-spring.security.user.roles=ACTUATOR_ADMIN
-
-# INFO ENDPOINT CONFIGURATION
-info.app.name=@project.name@
-info.app.description=@project.description@
-info.app.version=@project.version@
-info.app.encoding=@project.build.sourceEncoding@q
-info.app.java.version=@java.version@
-
-# SHUTDOWN ENDPOINT (ShutdownEndpoint)
-management.endpoint.shutdown.enabled=true
-
-# HEALTH ENDPOINT
-management.endpoint.health.show-details=always
-
-# ENDPOINTS WEB CONFIGURATION
-management.endpoints.web.exposure.include=*
-
-server.port=8081
+## Logging
+#logging.file=app.log
+## Spring Security default user name and password
+#spring.security.user.name=actuator
+#spring.security.user.password=actuator
+#spring.security.user.roles=ACTUATOR_ADMIN
+#
+## INFO ENDPOINT CONFIGURATION
+#info.app.name=@project.name@
+#info.app.description=@project.description@
+#info.app.version=@project.version@
+#info.app.encoding=@project.build.sourceEncoding@
+#info.app.java.version=@java.version@
+#
+## SHUTDOWN ENDPOINT (ShutdownEndpoint)
+#management.endpoint.shutdown.enabled=true
+#
+## HEALTH ENDPOINT
+#management.endpoint.health.show-details=always
+#
+## ENDPOINTS WEB CONFIGURATION
+#management.endpoints.web.exposure.include=*
+#
+#management.security.enabled=true
+##Eureka
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+#eureka.client.healthcheck.enabled=true
+#eureka.client.lease.duration-in-seconds=5
+#eureka.instance.lease-renewal-interval-in-seconds=5
+#eureka.instance.lease-expiration-duration-in-seconds=2
+#
+#server.port=8081
