--- a/my-movie/pom.xml
+++ b/my-movie/pom.xml
@@ -57,6 +57,10 @@
             <artifactId>springfox-swagger2</artifactId>
             <version>2.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>io.springfox</groupId>
